fix(Accounts): item overflow

--- a/src/components/Wallet/TopBar/Accounts/Accounts.scss
+++ b/src/components/Wallet/TopBar/Accounts/Accounts.scss
@@ -20,8 +20,8 @@
             justify-content: space-between;
 
             .inner {
-                width: 100%;
                 height: 60px;
+                min-width: 0;
                 display: flex;
                 align-items: center;
                 justify-content: flex-start;
